[2832635] Code fix based on Findbugs analysis (thanks fantayeneh for the patch).